--- a/index13.html
+++ b/index13.html
@@ -370,16 +370,17 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <a href="index3.html">
-                    <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/red_friesa.jpg" alt=""></picture>
-                  </a>
+                <a href="index6.html">
+                  <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
+                </a>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>FRIESA</h2>
+                      <h2>ORANGE</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index3.html">
-                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <a href="index6.html">
+                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
                             fill="white" />
@@ -390,7 +391,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj"></span>
+                    <span class="blur_obj blur_obj_orange"></span>
                   </div>
                 </div>
               </div>
