--- a/index.html
+++ b/index.html
@@ -217,6 +217,38 @@
           </div>
           <div class="row justify-content-center w-5">
             <div class="col-10 position-relative block_main_home">
+              <a href="index13.html">
+                <div class="position-relative">
+                  <picture>
+                    <img id="img_main_2" class="mobile_pic anim-pic" src="img/landing_Ai.jpg" alt="">
+                  </picture>
+                  <div class="lds-dual-ring lds-dual-ring_home"></div>
+                </div>
+              </a>
+              <div class="row row_info_main anim-pic">
+                <div class="col-6">
+                  <h2>AI course</h2>
+                  <h5>landing for course</h5>
+                </div>
+                <div class="col-4">
+                  <a href="index13.html">
+                    <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
+                        fill="white" />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="back_blur">
+              <div class="position-relative">
+                <span class="blur_obj blur_obj_aston"></span>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center w-6">
+            <div class="col-10 position-relative block_main_home">
               <a href="index6.html">
                 <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
               </a>
@@ -242,7 +274,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-6">
+          <div class="row justify-content-center w-7">
             <div class="col-10 position-relative block_main_home">
               <a href="index14.html">
                 <picture><source srcset="img/Landing_avto.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/Landing_avto.jpg" alt=""></picture>
@@ -269,7 +301,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-7">
+          <div class="row justify-content-center w-8">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
                 <picture><source srcset="img/model_ipad.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/model_ipad.jpg" alt=""></picture>
@@ -296,7 +328,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-8">
+          <div class="row justify-content-center w-9">
             <div class="col-10 position-relative block_main_home">
               <a href="index8.html">
                 <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
@@ -323,7 +355,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-9">
+          <div class="row justify-content-center w-10">
             <div class="col-10 position-relative block_main_home">
               <a href="index9.html">
                 <picture><source srcset="img/fybridS_main_2.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/fybridS_main_2.jpg" alt=""></picture>
@@ -350,7 +382,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-10">
+          <div class="row justify-content-center w-11">
             <div class="col-10 position-relative block_main_home">
               <a href="index10.html">
                 <picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_9" class="mobile_pic" src="img/rialust_main.jpg" alt=""></picture>
@@ -377,7 +409,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-11">
+          <div class="row justify-content-center w-12">
             <div class="col-10 position-relative block_main_home">
               <a href="index11.html">
                 <picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/ekfood_main.jpg" alt=""></picture>
@@ -404,7 +436,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-12">
+          <div class="row justify-content-center w-13">
             <div class="col-10 position-relative block_main_home">
               <a href="index12.html">
                 <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_11" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
