--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </div>
           <div class="row justify-content-center w-5">
             <div class="col-10 position-relative block_main_home">
-              <a href="index13.html">
+              <a href="index15.html">
                 <div class="position-relative">
                   <picture>
                     <img id="img_main_2" class="mobile_pic anim-pic" src="img/landing_Ai.jpg" alt="">
@@ -231,7 +231,7 @@
                   <h5>landing for course</h5>
                 </div>
                 <div class="col-4">
-                  <a href="index13.html">
+                  <a href="index15.html">
                     <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
@@ -243,7 +243,7 @@
             </div>
             <div class="back_blur">
               <div class="position-relative">
-                <span class="blur_obj blur_obj_aston"></span>
+                <span class="blur_obj blur_obj_drdoogy"></span>
               </div>
             </div>
           </div>
