--- a/index15.html
+++ b/index15.html
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="info_gradient"></div>
-          <div id="imgbox" class="imgbox imgbox_avto">
+          <div id="imgbox" class="imgbox imgbox_Ai">
             <picture><img class="img_back_main"  src="img/landing_Ai.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
