--- a/index15.html
+++ b/index15.html
@@ -115,7 +115,7 @@
           </div>
           <div class="info_gradient"></div>
           <div id="imgbox" class="imgbox imgbox_Ai">
-            <picture><img class="img_back_main"  src="img/landing_Ai.jpg" alt=""></picture>
+            <picture><img class="img_back_main"  src="img/ai_main.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
         </div>
