--- a/index15.html
+++ b/index15.html
@@ -281,7 +281,7 @@
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
                 <div class="col-8 mob_on_full">
-                  <picture><img id="img_back_DR_3" width="100%" src="img/avto_ver.jpg" alt=""></picture>
+                  <picture><img id="img_back_DR_3" width="100%" src="img/ai_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div style="padding-bottom: 0px;" class="row">
