--- a/index15.html
+++ b/index15.html
@@ -143,7 +143,7 @@
             <div class="carousel-item">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/avto_img_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/ai_pc_4.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/ai_pc_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/ai_pc_4.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
                   <picture><source srcset="img/ai_pc_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/ai_pc_5.jpg" alt="ASTON"></picture>
@@ -164,29 +164,29 @@
           </button>
         </div>
           <div class="mobile-carusel" id="gallery-img">
-            <a style="margin-left: 10vw;" href="img/avto_mobile_1.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-left: 10vw;" href="img/ai_mob_1.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_1.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_1.jpg" alt=''></picture>
             </a>
-            <a href="img/avto_mobile_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/ai_mob_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_2.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_2.jpg" alt=''></picture>
             </a>
-            <a href="img/avto_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/ai_mob_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_3.jpg" alt=''></picture>
             </a>
-            <a href="img/avto_mobile_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/ai_mob_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_4.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_4.jpg" alt=''></picture>
             </a>
-            <a href="img/avto_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/ai_mob_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_5.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_5.jpg" alt=''></picture>
             </a>
-            <a style="margin-right: 10vw;" href="img/avto_mobile_6.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-right: 10vw;" href="img/ai_mob_6.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_mobile_6.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_mob_6.jpg" alt=''></picture>
             </a>
         
         
