--- a/index15.html
+++ b/index15.html
@@ -275,7 +275,7 @@
             </div>
           </div>
         </div>
-        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_avto ">
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_ai ">
 
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
