--- a/index15.html
+++ b/index15.html
@@ -286,7 +286,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/avto_macbook.png" alt=""></picture>
+                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/ai_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
@@ -304,17 +304,17 @@
               </svg>
             </div>
             <div class="col-9" id="gallery-img">
-              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_1.jpg" alt="ASTON"></picture>
-              <a href="img/avto_img_1.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_1.jpg" alt=''></picture>
+              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/ai_pc_2.jpg" alt="ASTON"></picture>
+              <a href="img/ai_pc_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_pc_2.jpg" alt=''></picture>
               </a>
             </div>
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-9" id="gallery-img">
-              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/avto_img_2.jpg" alt="ASTON"></picture>
-              <a href="img/avto_img_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/avto_img_2.jpg" alt=''></picture>
+              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/ai_pc_3.jpg" alt="ASTON"></picture>
+              <a href="img/ai_pc_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_pc_3.jpg" alt=''></picture>
               </a>
             </div>
           </div>
@@ -332,12 +332,12 @@
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
-                style="background-color: #dec500; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3>#dec500</h3>
+                style="background-color: #009efd; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                <h3>#009efd</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style"
-              style="background-color: #428bdb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-              <h3>#428bdb</h3>
+              style="background-color: #35FCE7; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+              <h3>#35FCE7</h3>
             </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
@@ -360,11 +360,11 @@
                     </div>
                   </div>
                   <div class="row color_site_box">
-                    <div class="col-5 color_site color_bl_4" style="background-color: #009900;">
-                      <h3>#009900</h3>
+                    <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
+                      <h3>#ff1252</h3>
                     </div>
-                    <div class="col-5 color_site color_bl_5" style="background-color: #dec500;">
-                      <h3>#dec500</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #009efd;">
+                      <h3>#009efd</h3>
                     </div>
                   </div>
                 </div>
