--- a/index16.html
+++ b/index16.html
@@ -114,8 +114,8 @@
             </div>
           </div>
           <div class="info_gradient"></div>
-          <div id="imgbox" class="imgbox imgbox_Ai">
-            <picture><img class="img_back_main"  src="img/Landing_maria.jpg" alt=""></picture>
+          <div id="imgbox" class="imgbox imgbox_maria">
+            <picture><img class="img_back_main"  src="img/maria_main.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
         </div>
