--- a/index16.html
+++ b/index16.html
@@ -276,7 +276,7 @@
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
                 <div class="col-8 mob_on_full">
-                  <picture><img id="img_back_DR_3" width="100%" src="img/ai_ver.jpg" alt=""></picture>
+                  <picture><img id="img_back_DR_3" width="100%" src="img/maria_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div style="padding-bottom: 0px;" class="row">
@@ -299,17 +299,17 @@
               </svg>
             </div>
             <div class="col-9" id="gallery-img">
-              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/ai_pc_2.jpg" alt="ASTON"></picture>
-              <a href="img/ai_pc_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_pc_2.jpg" alt=''></picture>
+              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/maria_img_2.jpg" alt="ASTON"></picture>
+              <a href="img/maria_img_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_img_2.jpg" alt=''></picture>
               </a>
             </div>
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-9" id="gallery-img">
-              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/ai_pc_3.jpg" alt="ASTON"></picture>
-              <a href="img/ai_pc_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/ai_pc_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/maria_img_3.jpg" alt="ASTON"></picture>
+              <a href="img/maria_img_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_img_3.jpg" alt=''></picture>
               </a>
             </div>
           </div>
