--- a/index16.html
+++ b/index16.html
@@ -281,7 +281,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/ai_macbook.png" alt=""></picture>
+                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/maria_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
