--- a/index16.html
+++ b/index16.html
@@ -327,12 +327,12 @@
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
-                style="background-color: #009efd; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3>#009efd</h3>
+                style="background-color: #ebebeb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                <h3>#ebebeb</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style"
-              style="background-color: #35FCE7; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-              <h3>#35FCE7</h3>
+              style="background-color: #ffe800; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+              <h3>#ffe800</h3>
             </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
@@ -355,11 +355,11 @@
                     </div>
                   </div>
                   <div class="row color_site_box">
-                    <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
+                    <!-- <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
                       <h3>#ff1252</h3>
-                    </div>
-                    <div class="col-5 color_site color_bl_5" style="background-color: #009efd;">
-                      <h3>#009efd</h3>
+                    </div> -->
+                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb;">
+                      <h3>#ebebeb</h3>
                     </div>
                   </div>
                 </div>
