--- a/index5.html
+++ b/index5.html
@@ -389,7 +389,7 @@
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
                 <a href="index13.html">
-                  <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/course_prew.jpg" alt=""></picture>
+                  <picture><source srcset="img/course_prew.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/course_prew.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main">
                     <div class="col-6">
