--- a/index16.html
+++ b/index16.html
@@ -327,7 +327,7 @@
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
-                style="background-color: #ebebeb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                style="background-color: #ebebeb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);color: black;">
                 <h3>#ebebeb</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style"
@@ -358,7 +358,7 @@
                     <!-- <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
                       <h3>#ff1252</h3>
                     </div> -->
-                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb;">
+                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb; color: black;">
                       <h3>#ebebeb</h3>
                     </div>
                   </div>
