--- a/index16.html
+++ b/index16.html
@@ -270,7 +270,7 @@
             </div>
           </div>
         </div>
-        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_ai ">
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_maria ">
 
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
