--- a/index16.html
+++ b/index16.html
@@ -328,7 +328,7 @@
               </div>
               <div class="col-4 color_bl_2 bl_style"
                 style="background-color: #ebebeb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);color: black;">
-                <h3>#ebebeb</h3>
+                <h3 style="color: black;">#ebebeb</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style"
               style="background-color: #ffe800; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
@@ -358,8 +358,8 @@
                     <!-- <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
                       <h3>#ff1252</h3>
                     </div> -->
-                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb; color: black;">
-                      <h3>#ebebeb</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb;">
+                      <h3 style="color: black;">#ebebeb</h3>
                     </div>
                   </div>
                 </div>
