--- a/index16.html
+++ b/index16.html
@@ -332,7 +332,7 @@
               </div>
               <div class="col-4 color_bl_3 bl_style"
               style="background-color: #ffe800; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-              <h3>#ffe800</h3>
+              <h3 style="color: black;">#ffe800</h3>
             </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
