--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-8">
+          <!-- <div class="row justify-content-center w-8">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
                 <picture><source srcset="img/Landing_inv.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/Landing_inv.jpg" alt=""></picture>
@@ -354,7 +354,7 @@
                 <span class="blur_obj blur_obj_model"></span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="row justify-content-center w-9">
             <div class="col-10 position-relative block_main_home">
               <a href="index8.html">
