--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <div class="row justify-content-center w-8">
             <div class="col-10 position-relative block_main_home">
               <a href="index7.html">
-                <picture><source srcset="img/Landing_inv.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/Landing_inve.jpg" alt=""></picture>
+                <picture><source srcset="img/Landing_inve.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/Landing_inve.jpg" alt=""></picture>
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
