--- a/index17.html
+++ b/index17.html
@@ -110,7 +110,7 @@
           </div>
           <div class="info_gradient"></div>
           <div id="imgbox" class="imgbox imgbox_maria">
-            <picture><img class="img_back_main"  src="img/Landing_inv.jpg" alt=""></picture>
+            <picture><img class="img_back_main"  src="img/Landing_inve.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
         </div>
