--- a/index17.html
+++ b/index17.html
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="info_gradient"></div>
-          <div id="imgbox" class="imgbox imgbox_maria">
+          <div id="imgbox" class="imgbox imgbox_inver">
             <picture><img class="img_back_main"  src="img/Landing_inve.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
