--- a/index17.html
+++ b/index17.html
@@ -147,26 +147,26 @@
             <div class="carousel-item active">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_1.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/maria_img_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_1.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_2.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_2.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_3.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_3.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_4.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_4.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_5.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_5.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/maria_img_6.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_6.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
