--- a/index17.html
+++ b/index17.html
@@ -181,29 +181,29 @@
           </button>
         </div>
           <div class="mobile-carusel" id="gallery-img">
-            <a style="margin-left: 10vw;" href="img/maria_mobile_1.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-left: 10vw;" href="img/invert_mobile_1.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_1.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_1.jpg" alt=''></picture>
             </a>
-            <a href="img/maria_mobile_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/invert_mobile_2.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_2.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_2.jpg" alt=''></picture>
             </a>
-            <a href="img/maria_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/invert_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_3.jpg" alt=''></picture>
             </a>
-            <a href="img/maria_mobile_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/invert_mobile_4.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_4.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_4.jpg" alt=''></picture>
             </a>
-            <a href="img/maria_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
+            <a href="img/invert_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank"
               class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_5.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_5.jpg" alt=''></picture>
             </a>
-            <a style="margin-right: 10vw;" href="img/maria_mobile_6.jpg" data-pswp-width="638" data-pswp-height="956"
+            <a style="margin-right: 10vw;" href="img/invert_mobile_6.jpg" data-pswp-width="638" data-pswp-height="956"
               target="_blank" class="mobile-carusel-item">
-              <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_mobile_6.jpg" alt=''></picture>
+              <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_mobile_6.jpg" alt=''></picture>
             </a>
         
         
