--- a/index17.html
+++ b/index17.html
@@ -132,7 +132,7 @@
           </div>
           <div class="info_gradient"></div>
           <div id="imgbox" class="imgbox imgbox_inver">
-            <picture><img class="img_back_main"  src="img/Landing_inve.jpg" alt=""></picture>
+            <picture><img class="img_back_main img_back_mai_invert"  src="img/invert_main.jpg" alt=""></picture>
             <div class="lds-dual-ring"></div>
           </div>
         </div>
