--- a/index17.html
+++ b/index17.html
@@ -147,7 +147,7 @@
             <div class="carousel-item active">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/maria_img_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_1.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/invert_img_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_1.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
                   <picture><source srcset="img/invert_img_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/invert_img_3.jpg" alt="ASTON"></picture>
@@ -303,7 +303,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/maria_macbook.png" alt=""></picture>
+                  <picture><img  id="img_back_DR_4" style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/invert_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
