--- a/index17.html
+++ b/index17.html
@@ -321,17 +321,17 @@
               </svg>
             </div>
             <div class="col-9" id="gallery-img">
-              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/maria_img_2.jpg" alt="ASTON"></picture>
-              <a href="img/maria_img_2.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_img_2.jpg" alt=''></picture>
+              <picture></picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/invert_img_1.jpg" alt="ASTON"></picture>
+              <a href="img/invert_img_1.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_img_1.jpg" alt=''></picture>
               </a>
             </div>
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-9" id="gallery-img">
-              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/maria_img_3.jpg" alt="ASTON"></picture>
-              <a href="img/maria_img_3.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
-                <picture><img width="100%" class="mobile-carusel-item-img" src="img/maria_img_3.jpg" alt=''></picture>
+              <picture><img width="100%" class="carousel_img des_off" id="img_back_AS_2" src="img/invert_img_4.jpg" alt="ASTON"></picture>
+              <a href="img/invert_img_4.jpg" data-pswp-width="1784" data-pswp-height="890" target="_blank" class="mobs_off">
+                <picture><img width="100%" class="mobile-carusel-item-img" src="img/invert_img_4.jpg" alt=''></picture>
               </a>
             </div>
           </div>
