--- a/index17.html
+++ b/index17.html
@@ -345,16 +345,16 @@
             </div>
             <div class="row colors_box">
               <div class="col-4 color_bl_1 bl_style"
-                style="border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-                <h3>#000000</h3>
+                style="background-color: #0E0E0E; border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                <h3>#0E0E0E</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
-                style="background-color: #ebebeb; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);color: black;">
-                <h3 style="color: black;">#ebebeb</h3>
+                style="background-color: #141414; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);color: black;">
+                <h3>#141414</h3>
               </div>
               <div class="col-4 color_bl_3 bl_style"
-              style="background-color: #ffe800; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
-              <h3 style="color: black;">#ffe800</h3>
+              style="background-color: #FF5400; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+              <h3 >#FF5400</h3>
             </div>
               <div class="fonts_box_back">
                 <div class="fonts_box">
@@ -380,8 +380,8 @@
                     <!-- <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
                       <h3>#ff1252</h3>
                     </div> -->
-                    <div class="col-5 color_site color_bl_5" style="background-color: #ebebeb;">
-                      <h3 style="color: black;">#ebebeb</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #0E0E0E;">
+                      <h3 >#0E0E0E</h3>
                     </div>
                   </div>
                 </div>
