--- a/index17.html
+++ b/index17.html
@@ -298,7 +298,7 @@
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
                 <div class="col-8 mob_on_full">
-                  <picture><img id="img_back_DR_3" width="100%" src="img/ivert_ver.jpg" alt=""></picture>
+                  <picture><img id="img_back_DR_3" width="100%" src="img/invert_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div style="padding-bottom: 0px;" class="row">
