--- a/index17.html
+++ b/index17.html
@@ -364,8 +364,8 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 main_font">
-                      <h3>Roboto</h3>
+                    <div class="col-12">
+                      <h3>Inter</h3>
                     </div>
                     <div class="col-12 font_letter">
                       <h4>
@@ -380,8 +380,8 @@
                     <!-- <div class="col-5 color_site color_bl_4" style="background-color: #ff1252;">
                       <h3>#ff1252</h3>
                     </div> -->
-                    <div class="col-5 color_site color_bl_5" style="background-color: #0E0E0E;">
-                      <h3 >#0E0E0E</h3>
+                    <div class="col-5 color_site color_bl_5" style="background-color: #141414;">
+                      <h3 >#141414</h3>
                     </div>
                   </div>
                 </div>
