--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             </div>
             <div class="back_blur">
               <div class="position-relative">
-                <span class="blur_obj blur_obj_model"></span>
+                <span class="blur_obj blur_obj_ivert"></span>
               </div>
             </div>
           </div>
@@ -459,7 +459,7 @@
             </div>
             <div class="back_blur">
               <div class="position-relative">
-                <span class="blur_obj blur_obj_ekfood"></span>
+                <span class="blur_obj blur_obj_maria"></span>
               </div>
             </div>
           </div>
