--- a/index11.html
+++ b/index11.html
@@ -440,14 +440,14 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <a href="index12.html">
-                    <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
+                  <a href="index16.html">
+                    <picture><source srcset="img/Landing_maria.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/Landing_maria.jpg" alt=""></picture>
                   </a>                  <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>EKFOOD</h2>
+                      <h2>Maria sunny</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index12.html">
+                      <a href="index16.html">
                         <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
@@ -460,7 +460,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_drdoogy"></span>
+                    <span class="blur_obj blur_obj_maria"></span>
                   </div>
                 </div>
               </div>
