--- a/index13.html
+++ b/index13.html
@@ -370,15 +370,15 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                <a href="index6.html">
-                  <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
+                <a href="index13.html">
+                  <picture><source srcset="img/landing_Ai.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/landing_Ai.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>ORANGE</h2>
+                      <h2>AI course</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index6.html">
+                      <a href="index13.html">
                         <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
