--- a/index16.html
+++ b/index16.html
@@ -373,15 +373,14 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <a href="index7.html">
-                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
-                  </a>
-                  <div class="row row_info_main">
+                  <a href="index12.html">
+                    <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
+                  </a>                  <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>MODEL</h2>
+                      <h2>Dr doogy</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index14.html">
+                      <a href="index12.html">
                         <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
@@ -394,7 +393,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_model"></span>
+                    <span class="blur_obj blur_obj_drdoogy"></span>
                   </div>
                 </div>
               </div>
