--- a/index17.html
+++ b/index17.html
@@ -395,15 +395,15 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <a href="index7.html">
-                    <picture><source srcset="img/model_post_5.webp" type="image/webp"><img id="img_main_5" class="mobile_pic" src="img/model_post_5.jpg" alt=""></picture>
+                  <a href="index8.html">
+                    <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
                   </a>
                   <div class="row row_info_main">
                     <div class="col-6">
-                      <h2>MODEL</h2>
+                      <h2>SENATOR</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index14.html">
+                      <a href="index8.html">
                         <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
@@ -416,7 +416,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_model"></span>
+                    <span class="blur_obj blur_obj_senator"></span>
                   </div>
                 </div>
               </div>
