--- a/index14.html
+++ b/index14.html
@@ -347,8 +347,8 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 main_font">
-                      <h3>Roboto</h3>
+                    <div class="col-12 main_font main_font_inter">
+                      <h3>Inter</h3>
                     </div>
                     <div class="col-12 font_letter">
                       <h4>
