--- a/index15.html
+++ b/index15.html
@@ -320,7 +320,7 @@
           </div>
         </div>
         <div class="pg-1_bk_3">
-          <div style="margin-bottom: 200px;" class="container fonts_colors_con ">
+          <div style="margin-bottom: 200px;" class="container fonts_colors_con font_course">
             <div class="row">
               <div class="col-12 font-ek">
                 <h2>COLOR <span>&</span> TYPOGRAPHY</h2>
@@ -348,7 +348,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12 main_font">
-                      <h3>Roboto</h3>
+                      <h3>Gilroy</h3>
                     </div>
                     <div class="col-12 font_letter">
                       <h4>
