--- a/index17.html
+++ b/index17.html
@@ -364,7 +364,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 main_font_inter">
                       <h3>Inter</h3>
                     </div>
                     <div class="col-12 font_letter">
