--- a/index13.html
+++ b/index13.html
@@ -391,7 +391,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_orange"></span>
+                    <span class="blur_obj blur_obj_drdoogy"></span>
                   </div>
                 </div>
               </div>
