--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
-                  <h2>Maria sunny</h2>
+                  <h2>MariaSunny</h2>
                   <h5>Landing page</h5>
                 </div>
                 <div class="col-4">
