--- a/index16.html
+++ b/index16.html
@@ -323,7 +323,7 @@
             </div>
             <div class="row colors_box">
               <div class="col-4 color_bl_1 bl_style"
-                style="border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                style="border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
@@ -343,7 +343,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12 main_font_inter">
-                      <h3>Arial</h3>
+                      <h3>Inter</h3>
                     </div>
                     <div class="col-12 font_letter">
                       <h4>
