--- a/index17.html
+++ b/index17.html
@@ -345,7 +345,7 @@
             </div>
             <div class="row colors_box">
               <div class="col-4 color_bl_1 bl_style"
-                style="background-color: #0E0E0E; border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                style="background-color: #0E0E0E; border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
                 <h3>#0E0E0E</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
