--- a/index15.html
+++ b/index15.html
@@ -328,7 +328,7 @@
             </div>
             <div class="row colors_box">
               <div class="col-4 color_bl_1 bl_style"
-                style="border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color); border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
+                style="border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);">
                 <h3>#000000</h3>
               </div>
               <div class="col-4 color_bl_2 bl_style"
