--- a/index15.html
+++ b/index15.html
@@ -204,9 +204,7 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"The Academy is a project designed to attract users to our course and increase conversion rates. We've created 10 screens
-              that combine visual appeal and informative content to deliver a compelling user experience. The color scheme was
-              carefully chosen to evoke associations with wealth, tranquility, and monkeys.</p>
+              <p>OGO AI is a project created for course registration focused on learning artificial intelligence tools. The design system and color palette have been carefully selected to evoke a sense of the future and the unknown.</p>
             </div>
             <div class="col-3 mob_off"></div>
 
