--- a/index16.html
+++ b/index16.html
@@ -199,9 +199,7 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"The Academy is a project designed to attract users to our course and increase conversion rates. We've created 10 screens
-              that combine visual appeal and informative content to deliver a compelling user experience. The color scheme was
-              carefully chosen to evoke associations with wealth, tranquility, and monkeys.</p>
+              <p>Maria Sunny is a website project designed for a streamer. The main goal of the project is to allow people to request song performances live during the stream. The design and interface have been specially developed for ease of use on mobile devices, as the target audience primarily accesses the platform through them.</p>
             </div>
             <div class="col-3 mob_off"></div>
 
