--- a/index17.html
+++ b/index17.html
@@ -221,9 +221,7 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"The Academy is a project designed to attract users to our course and increase conversion rates. We've created 10 screens
-              that combine visual appeal and informative content to deliver a compelling user experience. The color scheme was
-              carefully chosen to evoke associations with wealth, tranquility, and monkeys.</p>
+              <p>Victon Energy is a website project for a company specializing in the installation of uninterrupted power supply equipment for homes. The goal is to emphasize and prove the convenience and necessity of such solutions, while also showcasing the company’s seriousness and extensive experience in the field</p>
             </div>
             <div class="col-3 mob_off"></div>
 
