--- a/index14.html
+++ b/index14.html
@@ -204,9 +204,7 @@
             <h2>About</h2>
             <div class="col-3 mob_off"></div>
             <div class="col-6  mob_on justify-content-end align-items-center d-flex">
-              <p>"The Academy is a project designed to attract users to our course and increase conversion rates. We've created 10 screens
-              that combine visual appeal and informative content to deliver a compelling user experience. The color scheme was
-              carefully chosen to evoke associations with wealth, tranquility, and monkeys.</p>
+              <p>Avto Importer is a website project for a car company specializing in importing vehicles from the USA. The main goal is to convince users of the simplicity and transparency of the ordering process, making it clear and convenient for them to place an order</p>
             </div>
             <div class="col-3 mob_off"></div>
 
