--- a/index2.html
+++ b/index2.html
@@ -126,7 +126,7 @@
                   <div class="mini_bloks">
                     <h2>Work experince</h2>
                     <h3 class="experince experince_mini">
-                      - Designed UX/UI prototypes<br> using Figma.
+                      - Designed UX/UI prototypes<br> using Figma.<br><br>
                       - Developed websites <br>on WordPress using<br> Elementor.<br><br>
                       - Developed websites <br> using HTML, CSS, and <br>JavaScript, incorporating<br>Bootstrap.<br><br>
                       - Created visual content for <br> projects in Photoshop/Illustrator,<br> including brand design,
@@ -202,7 +202,7 @@
                   <div class="experinceBox">
 
                     <h3 class="experince">
-                      - Designed UX/UI prototypes<br> using Figma.
+                      - Designed UX/UI prototypes<br> using Figma.<br><br>
                       - Developed websites <br>on WordPress using<br> Elementor.<br><br>
                       - Developed websites <br> using HTML, CSS, and <br>JavaScript, incorporating<br>Bootstrap.<br><br>
                       - Created visual content for <br> projects in Photoshop/Illustrator,<br> including brand design,
