--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
-                  <h2>Academy</h2>
-                  <h5>landing for course</h5>
+                  <h2>ACADEMY</h2>
+                  <h5>for course</h5>
                 </div>
                 <div class="col-4">
                   <a href="index13.html">
@@ -227,8 +227,8 @@
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
-                  <h2>AI course</h2>
-                  <h5>landing for course</h5>
+                  <h2>AI-COURSE</h2>
+                  <h5>for course</h5>
                 </div>
                 <div class="col-4">
                   <a href="index15.html">
@@ -281,7 +281,7 @@
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
-                  <h2>Autoimporter</h2>
+                  <h2>AVTOIMPORTER</h2>
                   <h5>carshop</h5>
                 </div>
                 <div class="col-4">
@@ -335,7 +335,7 @@
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
-                  <h2>Invertors</h2>
+                  <h2>INVERTORS</h2>
                   <h5>Landing page</h5>
                 </div>
                 <div class="col-4">
