--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               </a>
               <div class="row row_info_main">
                 <div class="col-6">
-                  <h2>AVTOIMPORTER</h2>
+                  <h2>AvtoImporter</h2>
                   <h5>carshop</h5>
                 </div>
                 <div class="col-4">
