--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-3">
+          <!-- <div class="row justify-content-center w-3">
             <div class="col-10 position-relative block_main_home">
               <a href="index5.html">
                 <div class="position-relative">
@@ -182,7 +182,7 @@
                 <span class="blur_obj blur_obj_memoji"></span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="row justify-content-center w-4">
             <div class="col-10 position-relative block_main_home">
               <a href="index13.html">
@@ -247,7 +247,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-6">
+          <!-- <div class="row justify-content-center w-6">
             <div class="col-10 position-relative block_main_home">
               <a href="index6.html">
                 <picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="mobile_pic" src="img/Landing_org.jpg" alt=""></picture>
@@ -273,7 +273,7 @@
                 <span class="blur_obj blur_obj_orange"></span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="row justify-content-center w-7">
             <div class="col-10 position-relative block_main_home">
               <a href="index14.html">
@@ -382,7 +382,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-10">
+          <!-- <div class="row justify-content-center w-10">
             <div class="col-10 position-relative block_main_home">
               <a href="index9.html">
                 <picture><source srcset="img/fybridS_main_2.webp" type="image/webp"><img id="img_main_8" class="mobile_pic" src="img/fybridS_main_2.jpg" alt=""></picture>
@@ -408,7 +408,7 @@
                 <span class="blur_obj blur_obj_fybrid"></span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="row justify-content-center w-11">
             <div class="col-10 position-relative block_main_home">
               <a href="index10.html">
@@ -490,7 +490,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center w-14">
+          <!-- <div class="row justify-content-center w-14">
             <div class="col-10 position-relative block_main_home">
               <a href="index12.html">
                 <picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_11" class="mobile_pic" src="img/dr.doogy.jpg" alt=""></picture>
@@ -516,7 +516,7 @@
                 <span class="blur_obj blur_obj_drdoogy"></span>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
